testsuite/tests/interpreter_errors/invalid_concats/test.out
script.lkql:1:7: error: Type error: expected List but got Int
1 | print([] & 2)
  |       ^^^^^^

